--- a/midterm/css/style.css
+++ b/midterm/css/style.css
@@ -8,8 +8,6 @@ Styles:
 Body font: Figtree, 14px
 H1, H3: Prompt
 
-White color: #FEFEFE
-Black color: #11151C
 Red link color: #B82B26
 
 Charts (black background): Font is .8em
@@ -28,10 +26,22 @@ header img,
     width: 100%;
 }
 
+header {
+    background-color: #11151C;
+    color: #FEFEFE;
+    text-align: center;
+}
+
 body {
     font-family: "Figtree";
+    font-size: 14px;
 }
 
 h1 {
+    font-family: "Prompt";
+    
+}
+
+h3 {
     font-family: "Prompt";
 }
