--- a/midterm/css/style.css
+++ b/midterm/css/style.css
@@ -28,7 +28,7 @@ header {
 }
 
 div {
-    padding: 15px 15px 15px 15px
+    padding: 15px 0px 15px 0px
 }
 
 body {
@@ -65,5 +65,6 @@ h3 {
 .container-fluid {
     background-color: #11151C;
     color: #FEFEFE;
+    padding: 30px 0px 30px 0px;
 }
 
