--- a/midterm/css/style.css
+++ b/midterm/css/style.css
@@ -27,13 +27,13 @@ header {
     text-align: center
 }
 
-div {
+div,
+iframe {
     padding: 15px 0px 15px 0px
 }
 
 body {
     font-family: "Figtree";
-    text-align: start;
     font-size: 14px;
 }
 
@@ -60,6 +60,7 @@ h3 {
 
 .container {
     width: 45%;
+    padding: 15px 0px 15px 0px;
 }
 
 .container-fluid {
@@ -68,3 +69,6 @@ h3 {
     padding: 30px 0px 30px 0px;
 }
 
+a {
+    color: darkred
+}
