--- a/midterm/css/style.css
+++ b/midterm/css/style.css
@@ -2,18 +2,6 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Figtree:ital,wght@0,300..900;1,300..900&family=Prompt:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Rubik+Mono+One&family=Victor+Mono:ital,wght@0,100..700;1,100..700&display=swap');
 
-/* 
-
-Styles:
-Body font: Figtree, 14px
-H1, H3: Prompt
-
-Red link color: #B82B26
-
-Charts (black background): Font is .8em
- */
-
-
 header img,
 .chart img {
     display: block;
@@ -67,11 +55,10 @@ h3 {
 .container-fluid {
     background-color: #11151C;
     color: #FEFEFE;
-    padding: 30px 0px 30px 0px;
 }
 
 a {
-    color: darkred
+    color: #B82B26
 }
 
 @media (max-width:776px) {
