--- a/midterm/css/style.css
+++ b/midterm/css/style.css
@@ -9,10 +9,10 @@ header img,
     width: 100%;
 }
 
-header {
+header,
+.container-fluid {
     background-color: #11151C;
     color: #FEFEFE;
-    text-align: center
 }
 
 .top,
@@ -48,13 +48,8 @@ h3 {
 }
 
 .container {
-    width: 45%;
+    width: 30%;
     padding: 15px 0px 15px 0px;
-}
-
-.container-fluid {
-    background-color: #11151C;
-    color: #FEFEFE;
 }
 
 a {
