--- a/midterm/css/style.css
+++ b/midterm/css/style.css
@@ -18,7 +18,7 @@ header,
 section img,
 div,
 .container {
-    padding: 15px 0px 15px 0px
+    padding: 15px 0px 15px 0px;
 }
 
 body {
@@ -53,7 +53,7 @@ h3 {
 }
 
 a {
-    color: #B82B26
+    color: #B82B26;
 }
 
 @media (max-width:776px) {
